--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "dev": "vite",
+  "build": "chmod +x node_modules/.bin/vite && vite build",
+  "preview": "vite preview",
+  "postinstall": "chmod +x node_modules/.bin/vite",
+  "vercel-build": "npm ci && npm run build"
+},
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,4 +23,4 @@
     "tailwindcss": "^3.4.0",
     "vite": "^5.0.10"
   }
-} 
+}
